# hebi_cpp_api_ros_examples

./: CMakeLists.txt  README.md  package.xml
basic/: README.md
config/: A-2084-01_params.yaml  A-2085-04_params.yaml  A-2085-05_params.yaml  A-2085-06_params.yaml  A-2099-07G_params.yaml  A-2240-05_params.yaml  A-2240-06_params.yaml  A-2303-06_params.yaml  a-2085-04_params.yaml  a-2085-05_params.yaml  a-2085-06_params.yaml  a-2240-05_params.yaml  diff_drive_params.yaml  mecanum_base_params.yaml  omni_base_params.yaml  parallel-gripper_params.yaml  tready_base_params.yaml  wheelie_params.yaml
config/hrdf/: A-2099-07G.hrdf  A-2303-06.hrdf
config/rviz/: cricket.rviz
data/hexapod/: gains18.xml  hex_config.xml  left.hrdf  lily.hrdf  right.hrdf
data/waypoints/: 1.txt  2.txt  3.txt  4.txt
gains/: diff_drive_gains.xml
kits/rosie/: README.md  rosie_teach_repeat.launch
launch/: arm_ar_node.launch  arm_moveit_node.launch  arm_node.launch  arm_node_4_dof.launch  arm_node_6_dof.launch  arm_node_7dof.launch  arm_node_action.launch  arm_teach_repeat_6_dof.launch  cricket.launch  daisy_with_5dof_arm.launch  daisy_with_arm.launch  diff_drive_control.launch  diff_drive_node.launch  group_node_basic.launch  lily_joint_level_control.launch  moveit_arm_node.launch  moveit_arm_node_4_dof.launch  moveit_arm_node_5_dof.launch  moveit_arm_node_6_dof.launch  omni_base_control.launch  omni_base_node.launch  rosie_teach_repeat.launch  rosie_teach_repeat_7dof.launch  teach_repeat_6_dof.launch  tready_py.launch  wheelie_control.launch
msg/: GroupSensorState.msg  TorqueModeCommand.msg  TreadedBaseState.msg
nodes/: README.md  arm_node.cpp  arm_node_action.cpp  diff_drive_node.cpp  gripper_node.cpp  moveit_arm_node.cpp  omni_base_controller_node.cpp  omni_base_node.cpp  teach_repeat_node.cpp  teach_repeat_node.hpp
robot/: arm.cpp  arm.hpp  arm_goal.hpp  arm_kinematics.cpp  arm_kinematics.hpp  arm_trajectory.cpp  arm_trajectory.hpp  diff_drive.cpp  diff_drive.hpp  kinematics_helper.cpp  kinematics_helper.hpp  omni_base.cpp  omni_base.hpp
scripts/tready/: tready_node.py
src/: README.md
src/basic/: .group_node.cpp.swp  group_node.cpp  group_setpoint_control.py
src/integrations/clearpath_jackal/: README.md  gripper_joystick_node.cpp  jackal_arm.launch  jackal_arm_gazebo.launch  jackal_arm_teleop.py  jackal_base_station.launch  rviz_config.rviz
src/kits/arm/: README.md  arm_ar_node.cpp  arm_moveit_node.cpp  arm_node.cpp  arm_node_7dof.cpp  arm_teach_repeat_node.cpp  arm_teach_repeat_node.hpp  arm_teach_repeat_node_7dof.cpp  gripper_moveit_node.cpp  gripper_node.cpp
src/kits/base/: diff_drive_node.cpp  mecanum_base_node.cpp  omni_base_controller_node.cpp  omni_base_node.cpp  wheelie.cpp
src/kits/daisy/: controller_node.cpp  hexapod_control.cpp
src/kits/daisy/input/: mobile_io.cpp
src/kits/daisy/robot/: hexapod.cpp  hexapod.hpp  leg.cpp  leg.hpp  step.hpp
src/kits/rosie/: teach_repeat_controller_node.cpp
src/kits/tready/: treaded_base_node.cpp  tready_control.cpp  tready_control.hpp
src/kits/tready/control/: tready_control.cpp  tready_control.hpp
src/kits/tready/robot/: treaded_base.cpp  treaded_base.hpp
src/util/: arm.cpp  arm.hpp  base_trajectory.cpp  base_trajectory.hpp  diff_drive.cpp  diff_drive.hpp  diff_drive.ipp  end_effector.hpp  goal.hpp  grav_comp.hpp  mecanum_base.cpp  mecanum_base.hpp  mobile_io.cpp  odom_publisher.cpp  omni_base.cpp  omni_base.hpp  param_loaders.hpp  waypoint.cpp
srv/: SetCommandLifetime.srv  SetFeedbackFrequency.srv  SetIKSeed.srv
util/: grav_comp.hpp  mobile_io.cpp  mobile_io.hpp  odom_publisher.cpp  path.cpp  path.hpp  waypoint.hpp
