<?xml version="1.0"?>
<package format="3">
  <name>hebi_cpp_api_examples</name>
  <version>1.0.0</version>
  <description>Examples of using HEBI components through ROS, using the HEBI C++ API.</description>
  <maintainer email="chris@hebirobotics.com">Chris Bollinger</maintainer>
  <license>MIT</license>

  <url type="website">http://wiki.ros.org/hebi_cpp_api</url>
  <url type="website">http://docs.hebi.us</url>

  <author email="matt@hebirobotics.com">Matthew Tesch</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <build_depend>eigen</build_depend>

  <depend>rclcpp</depend>
  <depend>hebi_cpp_api</depend>
  <depend>tf</depend>
  <depend>action_msgs</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>control_msgs</depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
